删除商户信息，通过用户信息直接关联门店信息，新增账号主页，新增门店概括

--- a/src/main/resources/templates/index-topnav.html
+++ b/src/main/resources/templates/index-topnav.html
@@ -83,7 +83,7 @@
 			  <ul class="nav">
 			    <li>
 			      <a class="menuItem" th:href="@{/system/main}">
-			      <i class="fa fa-home"></i> <span class="nav-label">首页</span></a>
+			      <i class="fa fa-home"></i> <span class="nav-label">概括</span></a>
 			    </li>
 			  </ul>
 			</div>
@@ -263,6 +263,10 @@
 								<i class="fa fa-key"></i> 修改密码</a>
 							</li>
 							<li>
+								<a onclick="changeStore()">
+									<i class="fa fa-key"></i> 切换门店</a>
+							</li>
+							<li>
 								<a onclick="switchSkin()">
 								<i class="fa fa-dashboard"></i> 切换主题</a>
 							</li>
@@ -286,7 +290,7 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-                    <a href="javascript:;" class="active menuTab" th:data-id="@{/system/main}">首页</a>
+                    <a href="javascript:;" class="active menuTab" th:data-id="@{/system/main}">概括</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
@@ -349,6 +353,12 @@ function resetPwd() {
     var url = ctx + 'system/user/profile/resetPwd';
     $.modal.open("重置密码", url, '770', '380');
 }
+
+/* 切换门店 */
+function changeStore() {
+	location.href = ctx + 'store-index';
+}
+
 /* 切换主题 */
 function switchSkin() {
     layer.open({
