--- a/src/main/resources/templates/system/user/profile/profile.html
+++ b/src/main/resources/templates/system/user/profile/profile.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="gray-bg" style="font: 14px Helvetica Neue, Helvetica, PingFang SC, 微软雅黑, Tahoma, Arial, sans-serif !important;">
-    <input id="userId" name="userId" type="hidden" th:value="${user.userId}" />
+    <input id="userId" name="userId" type="hidden" th:value="${user.selfUserId}" />
     <section class="section-content">
     <div class="row">
         <div class="col-sm-3 pr5">
@@ -27,10 +27,6 @@
                         <li class="list-group-item"><i class="fa fa-phone"></i>
                             <b  class="font-noraml">手机号码：</b>
                             <p class="pull-right">[[${user.phonenumber}]]</p>
-                        </li>
-                        <li class="list-group-item" th:if="${user.dept?.deptName != null}"><i class="fa fa-group"></i>
-                            <b  class="font-noraml">所属部门：</b>
-                            <p class="pull-right" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;width:120px;">[[${user.dept?.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>
                         </li>
                         <li class="list-group-item"><i class="fa fa-envelope-o"></i>
                             <b  class="font-noraml">邮箱地址：</b>
