--- a/src/main/resources/templates/tool/gen/edit.html
+++ b/src/main/resources/templates/tool/gen/edit.html
@@ -139,7 +139,7 @@
 					                        <div class="col-sm-8">
 					                            <input id="parentMenuId" name="params[parentMenuId]" type="hidden" th:value="*{parentMenuId}"/>
 					                            <div class="input-group">
-												    <input id="parentMenuName" name="params[parentMenuName]" class="form-control" type="text" onclick="selectMenuTree()" placeholder="请选择上级菜单" maxlength="50" th:value="*{parentMenuName}" required>
+												    <input id="parentMenuName" name="params[parentMenuName]" class="form-control" type="text" onclick="selectMenuTree()" placeholder="请选择上级菜单" maxlength="50" th:value="*{parentMenuName}">
 											        <span class="input-group-addon"><i class="fa fa-search"></i></span>
 											    </div>
 					                        </div>
